fix logo alignment on PC view

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3,7 +3,9 @@
 
 /* Small devices (tablets, 768px and up) */
 @media (min-width: 768px) {
-
+  .navbar-express .navbar-header{
+    width:100%;
+  }
 }
 
 /* Medium devices (desktops, 992px and up) */
@@ -47,4 +49,19 @@ body {
   display: inline-block;
   margin-top: 9px;
   margin-bottom: 8px;
+}
+
+.navbar-express .express-toggle {
+  position: relative;
+  padding: 9px 10px;
+  float: right;
+  margin-top: auto;
+  margin-bottom: auto;
+  margin-left: 0;
+  padding-left: 0px;
+  margin-right: auto;
+  background-color: transparent;
+  background-image: none;
+  border: 1px solid transparent;
+  border-radius: 4px;
 }
